<resources>
    <string name="app_name">BloomCare</string>
    <string name="name">Name</string>
    <string name="species">Species</string>
    <string name="interval">Watering interval in days</string>
    <string name="lastWatered">Last watered (MM/DD/YY)</string>
    <string name="reminderTime">Reminder time (e.g. 9AM)</string>
    <string name="save">Save</string>
    <string name="delete">Delete</string>
    <string name="add_a_plant">Add a plant</string>
</resources>