<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_grey"
    tools:context=".AddPlantActivity">

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Add a plant"
        android:textSize="44sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp" />

    <EditText
        android:id="@+id/etvName"
        android:layout_width="match_parent"
        android:layout_height="71dp"
        android:layout_marginTop="35dp"
        android:background="@drawable/rounded_corner_view"
        android:hint="@string/name"
        android:padding="10dp"
        android:textColor="@color/fern_green"
        android:textSize="25sp"
        app:layout_constraintTop_toBottomOf="@+id/tvTitle"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"

        tools:layout_editor_absoluteY="147dp" />

    <EditText
        android:id="@+id/etvSpecies"
        android:layout_width="match_parent"
        android:layout_height="71dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/rounded_corner_view"
        android:hint="@string/species"
        android:padding="10dp"
        android:textColor="@color/black"
        android:textSize="25sp"
        app:layout_constraintTop_toBottomOf="@+id/etvName"
        tools:layout_editor_absoluteX="0dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"/>

    <EditText
        android:id="@+id/etvInterval"
        android:layout_width="match_parent"
        android:layout_height="71dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/rounded_corner_view"
        android:hint="@string/interval"
        android:padding="10dp"
        android:textColor="@color/black"
        android:textSize="25sp"
        app:layout_constraintTop_toBottomOf="@+id/etvSpecies"
        tools:layout_editor_absoluteX="0dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"/>

    <EditText
        android:id="@+id/etvLastWatered"
        android:layout_width="match_parent"
        android:layout_height="71dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/rounded_corner_view"
        android:hint="@string/lastWatered"
        android:padding="10dp"
        android:textColor="@color/black"
        android:textSize="25sp"
        app:layout_constraintTop_toBottomOf="@+id/etvInterval"
        tools:layout_editor_absoluteX="0dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"/>

    <EditText
        android:id="@+id/etvReminderTime"
        android:layout_width="match_parent"
        android:layout_height="71dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/rounded_corner_view"
        android:hint="@string/reminderTime"
        android:padding="10dp"
        android:textColor="@color/black"
        android:textSize="25sp"
        app:layout_constraintTop_toBottomOf="@+id/etvLastWatered"
        tools:layout_editor_absoluteX="0dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"/>

    <Button
        android:id="@+id/bttnSave"
        android:layout_width="61dp"
        android:layout_height="61dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:backgroundTint="@color/fern_green"
        android:padding="18dp"
        android:textAllCaps="false"
        android:textSize="18sp"
        app:cornerRadius="20dp"
        app:drawableLeftCompat="@drawable/ic_baseline_check_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="Add Button"
        />

</androidx.constraintlayout.widget.ConstraintLayout>